[tool.poetry]
name = "impalerbot"
version = "0.1.0"
description = ""
authors = ["Laura F Dickinson <l@veriny.tf>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
