[tool.poetry]
name = "brooks"
version = "0.2.0"
description = "Brooks Twitter Bot"
authors = ["Laura S Dickinson <l@veriny.tf>"]

[tool.poetry.dependencies]
python = "^3.7"
tweepy = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
